--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>"Formerly Imbibe" Menu</title>
+	<title>"The cafe formerly known as Imbibe" Menu</title>
 	<base href="/">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
